overflow width stopped

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,6 +13,7 @@ body {
    /* overflow: hidden; */
    overflow: scroll;
    display: flex;
+   overflow-x: hidden;
    
 } 
 
